fix bot svg alignment

--- a/sass/components/_status-icon.scss
+++ b/sass/components/_status-icon.scss
@@ -70,6 +70,23 @@
         line-height: 0;
         visibility: visible;
 
+        &.DM {
+            position: relative;
+            top: 83px;
+            left: 70px;
+            width: 24px;
+            height: 24px;
+
+            svg {
+                position: relative;
+                top: 2px;
+                left: 2.2px;
+                width: 20px;
+                height: 20px;
+                max-height: 20px;
+            }
+        }
+
         .modal & {
             bottom: -6px;
         }
