--- a/sass/layout/_headers.scss
+++ b/sass/layout/_headers.scss
@@ -555,7 +555,7 @@
 
         .status-wrapper-DM {
             height: 96px;
-            margin: 0 100px 3px 0;
+            margin: 0 83px 3px 0;
         }
 
         img {
@@ -572,6 +572,7 @@
 
     .channel-intro__title,
     .channel-intro-display-name {
+        display: flex;
         margin: 15px 0;
         font-family: 'Metropolis';
         font-size: 36px;
